# Huawei-oktober-2024

./: CMakeLists.txt  README.md  custom.txt  draw graph.py  draw_graph.py  draw_graph.spec  generator.cpp  generator.hpp  graph_data.txt  main.cpp  stress.cpp  write-up.cpp
.ccls-cache/@Users@artemi@Documents@repos@Huawei-oktober-2024/: main.cpp.blob
graphs/: graph_data0.txt  graph_data1.txt  graph_data10.txt  graph_data100.txt  graph_data1000.txt  graph_data1001.txt  graph_data1002.txt  graph_data1003.txt  graph_data1004.txt  graph_data1005.txt  graph_data1006.txt  graph_data1007.txt  graph_data1008.txt  graph_data1009.txt  graph_data101.txt  graph_data1010.txt  graph_data1011.txt  graph_data1012.txt  graph_data1013.txt  graph_data1014.txt  graph_data1015.txt  graph_data1016.txt  graph_data1017.txt  graph_data1018.txt  graph_data1019.txt  graph_data102.txt  graph_data1020.txt  graph_data1021.txt  graph_data1022.txt  graph_data1023.txt  graph_data1024.txt  graph_data1025.txt  graph_data1026.txt  graph_data1027.txt  graph_data1028.txt  graph_data1029.txt  graph_data103.txt  graph_data1030.txt  graph_data1031.txt  graph_data1032.txt  (+5335 more)
xcode/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  graph_data.txt  small_Minsk.txt
xcode/CMakeScripts/: ReRunCMake.make
xcode/Debug/: custom.txt  generator  main  stress
xcode/generator.build/Debug/ZERO_CHECK.build/: Script-EEF595E81912ED2D84587AB8.sh
xcode/graphs/: graph_data1.txt
xcode/main.xcodeproj/: project.pbxproj
xcode/stress.xcodeproj/: project.pbxproj
(+21 files in other folders)
